# mir_poc_01

./: .gitignore  AGENTS.md  Cargo.toml  Documentation.md  Makefile  README.md  faq_002.md  faq_003.md  faq_004.md  faq_005.md  faq_006.md  faq_009.md  faq_010.md  faq_012.md  faq_04.md  mir_hilight.html  progress.md  samples_progress.md  tasks.md
crates/mir-runtime/: Cargo.toml
crates/mir-runtime/examples/: current_l2_emit_theorem_lean_bundle.rs  mir_current_l2.rs  mir_practical_alpha05_session.rs  mir_practical_alpha1_attach.rs  mir_practical_alpha1_avatar.rs  mir_practical_alpha1_run_local.rs  mir_practical_alpha1_save_load.rs  mir_practical_alpha1_transport.rs  mirrorea_alpha_avatar_runtime.rs  mirrorea_alpha_layer_insertion_runtime.rs  mirrorea_alpha_local_runtime.rs  mirrorea_alpha_network_runtime.rs
crates/mir-runtime/src/: alpha_avatar_runtime.rs  alpha_layer_insertion_runtime.rs  alpha_local_runtime.rs  alpha_network_runtime.rs  clean_near_end.rs  current_l2.rs  current_l2_cli.rs  hotplug_runtime.rs  lib.rs  practical_alpha05_host_io.rs  practical_alpha05_session.rs  practical_alpha08_hotplug_session.rs  practical_alpha09_devtools.rs  practical_alpha1_avatar.rs  practical_alpha1_hotplug.rs  practical_alpha1_local_runtime.rs  practical_alpha1_save_load.rs  practical_alpha1_transport.rs  product_alpha1_devtools.rs  product_alpha1_session.rs  product_alpha1_transport.rs
crates/mir-runtime/tests/: alpha_avatar_runtime.rs  alpha_cut_save_load_runtime.rs  alpha_layer_insertion_runtime.rs  alpha_local_runtime.rs  (+76 more)
crates/mirrorea-cli/: Cargo.toml
(+2915 files in other folders)
