[package]
name = "mir-runtime"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
mir-ast = { path = "../mir-ast" }
mir-semantics = { path = "../mir-semantics" }
mirrorea-core = { path = "../mirrorea-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
