[package]
name = "mirrorea-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "mirrorea-alpha"
path = "src/main.rs"

[dependencies]
mir-ast = { path = "../mir-ast" }
mir-runtime = { path = "../mir-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
